--- a/cfg/config.yaml.template
+++ b/cfg/config.yaml.template
@@ -2,8 +2,17 @@
 genome: 'reference/genome.fa'
 genome_lengths: 'reference/genome.lengths'
 refseq: 'reference/refseq180404'
-genes: 'cfg/genes.txt'
+genes_mmr: 'cfg/genes.mmr.txt'
+cosmic: 'reference/cosmic180407.tsv'
+cancer_type: 'prostate'
 slop: 1000
+callers: [
+  'varscan',
+  'varscan_indel'
+]
+msi_callers: [
+  'varscan_indel'
+]
 samples: [
   SAMPLES
 ]
